--- a/DesafioCCXP/index.html
+++ b/DesafioCCXP/index.html
@@ -55,7 +55,7 @@
             </main>
 
                 <main class="direito">
-                <video width="700px" controls loop> <source src="/assets/Arlequina.mp4" type="video/mp4"></video>
+                <video autoplay muted width="700px" controls-none loop> <source src="/assets/Arlequina.mp4" type="video/mp4"></video>
             
        
     </main>
